--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="modal.css">
   <script src="https://kit.fontawesome.com/73c677be72.js"></script>
@@ -24,9 +26,10 @@
       </div>
     </header>
     <div class="choices">
-      <i id="rock" class="choice fas fa-hand-rock fa-10x"></i>
-      <i id="paper" class="choice fas fa-hand-paper fa-10x"></i>
-      <i id="scissors" class="choice fas fa-hand-scissors fa-10x"></i>
+      <!--NOTE: onclick new-->
+      <i id="rock" class="choice fas fa-hand-rock fa-10x" onclick="play('Rock')"></i>
+      <i id="paper" class="choice fas fa-hand-paper fa-10x" onclick="play('Paper')"></i>
+      <i id="scissors" class="choice fas fa-hand-scissors fa-10x" onclick="play('Scissors')"></i>
     </div>
   </div>
 
